--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,8 +12,13 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="#">Link1</a></li>
-        <li><a href="#">Link2</a></li>
+        <% if user_signed_in? %>
+          <li><a href="<%= root_path %>"><%= current_user.name %></a></li>
+          <li><a href="<%= destroy_user_session_path(current_user) %>" data-method='delete'>Cerrar sesión</a></li>
+        <% else %>
+          <li><a href="<%= user_session_path %>">Iniciar sesión</a></li>
+          <li><a href="<%= new_user_registration_path %>">Registrate</a></li>
+        <% end %>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
