--- a/app/views/histories/_form.html.erb
+++ b/app/views/histories/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: history, local: true, multipart: true, class: "form-horizontal") do |form| %>
+<%= form_with(model: history, local: true, multipart: true, class: "form-horizontal", method: :post) do |form| %>
   <% if history.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(history.errors.count, "error") %> prohibited this history from being saved:</h2>
@@ -11,6 +11,8 @@
     </div>
   <% end %>
   <fieldset>
+    <%= form.hidden_field :user_id, value: current_user.id %>
+
     <div class="form-group">
       <%= form.label :title, "Título", class: "col-lg-2 control-label" %>
       <div class="col-lg-10">
